# webhook-delivery-service

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 1bfc7186f528_add_event_model.py  2ea825b91c0a_add_next_retry_at_in_delivery.py  303974e46da3_add_delivery_model.py  620d4829eb8c_add_api_key_in_tenant_table.py  904574ba2e5b_add_signing_secret_in_tenant_table.py  944222792284_add_endpoint_model.py  b0f998fc5e08_create_tenant_table.py
app/: config.py  database.py  main.py  models.py  redis.py  schemas.py
app/api/dependencies/: auth.py
app/api/routes/: deliveries.py  endpoints.py  events.py  health.py  tenants.py
app/core/: exceptions.py  logging.py  redis.py
app/models/: __init__.py  delivery.py  endpoint.py  event.py  tenant.py
app/queries/: delivery.py  endpoint.py  event.py  tenant.py
app/schemas/: __init__.py  delivery.py  endpoint.py  event.py  health.py  tenant.py
app/scripts/: seed.py
app/services/: delivery.py  endpoint.py  event.py  health.py  tenant.py
app/tasks/: events.py  worker.py
docs/: known-gaps.md
docs/adr/: use-jsonb-for-event-payloads.md  use-on-conflict-for-event-idempotency.md  use-select-for-update-skip-locked.md  use-separate-delivery-tasks.md  use-tenant-idempotency-unique-constraint.md  use-two-celery-queues.md
scripts/: demo.sh  demo_retry.sh  load_test.py
test-receiver/: Dockerfile  main.py
tests/: conftest.py
tests/integration/: test_deliveries.py  test_endpoints.py  test_events.py  test_logs.py  test_system.py  test_tenants.py
tests/smoke/: test_app.py
tests/unit/: test_auth.py  test_event.py  test_rate_limit.py  test_retry.py  test_signing.py
